Fix with Qodana analyze